# Ion

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.plans/: prompt-builder.md  subagent.md  tool-register.md  web-api-plan.md
example/: App.tsx  index.css
src/Ion/: __init__.py  agent.py  cli.py  executor.py  ion.py  observability.py  skills.py  subagent.py  subagent_models.py  tasks.py
src/Ion/agents/: __init__.py  registry.py
src/Ion/agents/AuthBypassAgent/: AGENT.md
src/Ion/agents/DirBruteAgent/: AGENT.md
src/Ion/agents/FileUploadAgent/: AGENT.md
src/Ion/agents/PostExploitAgent/: AGENT.md
src/Ion/agents/PrivilegeEscalationAgent/: AGENT.md
src/Ion/agents/ReconAgent/: AGENT.md
src/Ion/agents/SQLInjectionAgent/: AGENT.md
src/Ion/agents/SSRFDetectionAgent/: AGENT.md
src/Ion/agents/VulnerabilityScanAgent/: AGENT.md
src/Ion/agents/WebFingerprintAgent/: AGENT.md
src/Ion/agents/XSSAgent/: AGENT.md
src/Ion/db/: __init__.py  core.py  models.py
src/Ion/executor/: __init__.py  executor.py  subagent.py
src/Ion/prompts/: __init__.py  builder.py
src/Ion/skills/: registry.py  tools.py
src/Ion/skills/ctf-common-patterns/: SKILL.md
src/Ion/skills/dirsearch/: SKILL.md
src/Ion/skills/ffuf/: SKILL.md
src/Ion/tasks/: manager.py  tools.py
src/Ion/tools/: __init__.py  builtin.py  http_client.py  network_tool.py  programing.py  registry.py  schema.json  shell.py  skill_tool.py  spawn_tool.py  task_tool.py  tools.py  web_search.py
src/Ion/web/: agent_runner.py  app.py  schemas.py
tests/: test_builder.py  test_subagent_models.py
(+25 files in other folders)
